@@ -22,7 +22,7 @@ import sys
 from testtools import ExtendedToStreamDecorator
 
 from subunit import StreamResultToBytes
-from subunit.filters import run_tests_from_stream
+from subunit.filters import find_stream, run_tests_from_stream
 
 
 def make_options(description):
@@ -33,7 +33,7 @@ def make_options(description):
 def main():
     parser = make_options(__doc__)
     (options, args) = parser.parse_args()
-    run_tests_from_stream(sys.stdin,
+    run_tests_from_stream(find_stream(sys.stdin, args),
         ExtendedToStreamDecorator(StreamResultToBytes(sys.stdout)))
     sys.exit(0)
 
